fix: fix mobile overflow hidden and added scroll to accordion

--- a/src/app/components/MyAccordion/MyAccordion.scss
+++ b/src/app/components/MyAccordion/MyAccordion.scss
@@ -1,4 +1,7 @@
 .accordion-container {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 100%;
   .AccordionRoot {
     /* variables */
     $trigger-border-color: #bababa;
